# OnnxOCR

./: .dockerignore  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements-fastapi.txt  setup-rust.bat  start_production.py  test_ocr.py  test_python37.py
.claude/: settings.local.json
.github/workflows/: claude-assistant.yml
app/: engine.py  logging.py  main.py  middleware.py  settings.py  ui.py
app/routers/: v1.py  v2.py
docs/: API_REFERENCE.md  SERVICE_REDESIGN.md
onnxocr/: api.py  cls_postprocess.py  db_postprocess.py  imaug.py  rec_postprocess.py
onnxocr/core/: __init__.py  async_base.py  config.py  downloader.py  exceptions.py  logging_config.py  model_manager.py
onnxocr/models/: __init__.py  async_classifier.py  async_detector.py  async_recognizer.py  async_system.py
onnxocr/utils/: __init__.py  image_ops.py
resources/: docker-compose.yml
src/: config.rs  lib.rs  main.rs
src/image/: loader.rs  mod.rs  postprocessing.rs  preprocessing.rs  transforms.rs
src/models/: classifier.rs  detector.rs  manager.rs  mod.rs  recognizer.rs
src/ocr/: mod.rs  pipeline.rs  types.rs
src/utils/: error.rs
src/web/: extractors.rs  handlers.rs  middleware.rs  mod.rs  ui.rs
static/: webui.css
static/css/: style.css
static/js/: main.js
templates/: index.html  webui.html
