[package]
name = "onnx-ocr"
version = "0.1.0"
edition = "2021"
authors = ["ding113"]
description = "High-performance ONNX-powered OCR service with dual upload modes"
license = "MIT"

[dependencies]
# Web框架与文件上传
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "limit", "timeout"] }

# ONNX推理引擎  
ort = { version = "=2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"

# 异步运行时
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# 图像处理
image = { version = "0.25", features = ["jpeg", "png", "bmp", "tiff"] }
imageproc = "0.25"

# 序列化与编码
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# 错误处理与日志
anyhow = "1.0"
thiserror = "1.0" 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 性能优化
rayon = "1.8"
parking_lot = "0.12"
once_cell = "1.19"

# 配置管理
clap = { version = "4.4", features = ["derive", "env"] }
num_cpus = "1.16"

# 实用工具
bytes = "1.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 1